--- a/ap_website/templates/streams/staff_card.html
+++ b/ap_website/templates/streams/staff_card.html
@@ -1,18 +1,30 @@
 {% load wagtailimages_tags %}
-<div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
-    <div class="team-member">
-        <div class="member-img">
-            <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
-            <div class="social">
-                <a href=""><i class="bi bi-twitter-x"></i></a>
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
+{% load wagtailcore_tags %}
+
+
+{% for card in self.cards %}
+{% image card.image fill-300x200 as img %}
+    <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+
+            <div class="team-member">
+                <div class="member-img">
+    <!--                <p>{{img.url}}</p>-->
+
+                    <img src="{{img.url}}" class="img-fluid" alt="">
+                    <div class="social">
+                        <a href=""><i class="bi bi-twitter-x"></i></a>
+                        <a href=""><i class="bi bi-facebook"></i></a>
+                        <a href=""><i class="bi bi-instagram"></i></a>
+                        <a href=""><i class="bi bi-linkedin"></i></a>
+                    </div>
+                </div>
+                <div class="member-info">
+                    <h4>{{card.name}}</h4>
+                    <span>Chief Executive Officer</span>
+                </div>
             </div>
-        </div>
-        <div class="member-info">
-            <h4>Walter White</h4>
-            <span>Chief Executive Officer</span>
-        </div>
-    </div>
-</div><!-- End Team Member -->
+
+
+
+    </div><!-- End Team Member -->
+{% endfor %}
