--- a/ap_website/templates/base.html
+++ b/ap_website/templates/base.html
@@ -1,11 +1,11 @@
 {% load static wagtailcore_tags wagtailuserbar %}
 
-<!DOCTYPE html>
+<!--<!DOCTYPE html>-->
 <html lang="en">
     <head>
         <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - Gp Bootstrap Template</title>
+  <title>Alvin and Partners</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -69,7 +69,8 @@
         
               <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
                 <!-- Uncomment the line below if you also wish to use an image logo -->
-                <!-- <img src="assets/img/logo.png" alt=""> -->
+                  <link href="{% static 'img/favicon.png' %}" rel="icon">
+<!--                 <img src="assets/img/logo.png" alt=""> -->
                 <h1 class="sitename">AP</h1>
                 <span>.</span>
               </a>
@@ -81,29 +82,29 @@
                   <li><a href="#services">Services</a></li>
                   <li><a href="#portfolio">Portfolio</a></li>
                   <li><a href="#team">Team</a></li>
-                  <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                    <ul>
-                      <li><a href="#">Dropdown 1</a></li>
-                      <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                        <ul>
-                          <li><a href="#">Deep Dropdown 1</a></li>
-                          <li><a href="#">Deep Dropdown 2</a></li>
-                          <li><a href="#">Deep Dropdown 3</a></li>
-                          <li><a href="#">Deep Dropdown 4</a></li>
-                          <li><a href="#">Deep Dropdown 5</a></li>
-                        </ul>
-                      </li>
-                      <li><a href="#">Dropdown 2</a></li>
-                      <li><a href="#">Dropdown 3</a></li>
-                      <li><a href="#">Dropdown 4</a></li>
-                    </ul>
-                  </li>
+<!--                  <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>-->
+<!--                    <ul>-->
+<!--                      <li><a href="#">Dropdown 1</a></li>-->
+<!--                      <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>-->
+<!--                        <ul>-->
+<!--                          <li><a href="#">Deep Dropdown 1</a></li>-->
+<!--                          <li><a href="#">Deep Dropdown 2</a></li>-->
+<!--                          <li><a href="#">Deep Dropdown 3</a></li>-->
+<!--                          <li><a href="#">Deep Dropdown 4</a></li>-->
+<!--                          <li><a href="#">Deep Dropdown 5</a></li>-->
+<!--                        </ul>-->
+<!--                      </li>-->
+<!--                      <li><a href="#">Dropdown 2</a></li>-->
+<!--                      <li><a href="#">Dropdown 3</a></li>-->
+<!--                      <li><a href="#">Dropdown 4</a></li>-->
+<!--                    </ul>-->
+<!--                  </li>-->
                   <li><a href="#contact">Contact</a></li>
                 </ul>
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
               </nav>
         
-              <a class="btn-getstarted" href="index.html#about">Get Started</a>
+              <a class="btn-getstarted" href="index.html#about">Download profile</a>
         
             </div>
           </header>
@@ -138,4 +139,78 @@
         <!-- Main JS File -->
         <script src="{% static 'js/main.js' %}"></script>
     </body>
+    <footer id="footer" class="footer">
+
+        <div class="footer-top">
+            <div class="container">
+                <div class="row gy-4">
+                    <div class="col-lg-4 col-md-6 footer-about">
+                        <a href="index.html" class="logo d-flex align-items-center">
+                            <span class="sitename">AP</span>
+                        </a>
+                        <div class="footer-contact pt-3">
+<!--                            <p>A108 Adam Street</p>-->
+                            <p>{{page.address}}</p>
+                            <p class="mt-3"><strong>Phone:</strong> <span>{{page.contact}}</span></p>
+                            <p><strong>Email:</strong> <span>{{page.email}}</span></p>
+                        </div>
+                        <div class="social-links d-flex mt-4">
+                            <a href=""><i class="bi bi-twitter-x"></i></a>
+                            <a href=""><i class="bi bi-facebook"></i></a>
+                            <a href=""><i class="bi bi-instagram"></i></a>
+                            <a href=""><i class="bi bi-linkedin"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-2 col-md-3 footer-links">
+                        <h4>Useful Links</h4>
+                        <ul>
+                            <li><i class="bi bi-chevron-right"></i> <a href="#hero"> Home</a></li>
+                            <li><i class="bi bi-chevron-right"></i> <a href="#about"> About us</a></li>
+<!--                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Services</a></li>-->
+<!--                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Terms of service</a></li>-->
+<!--                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Privacy policy</a></li>-->
+                        </ul>
+                    </div>
+
+<!--                    <div class="col-lg-2 col-md-3 footer-links">-->
+<!--                        <h4>Our Services</h4>-->
+<!--                        <ul>-->
+<!--                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Web Design</a></li>-->
+<!--                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Web Development</a></li>-->
+<!--                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Product Management</a></li>-->
+<!--                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Marketing</a></li>-->
+<!--                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Graphic Design</a></li>-->
+<!--                        </ul>-->
+<!--                    </div>-->
+
+                    <div class="col-lg-4 col-md-12 footer-newsletter">
+                        <h4>Our Newsletter</h4>
+                        <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
+                        <form action="forms/newsletter.php" method="post" class="php-email-form">
+                            <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Subscribe"></div>
+                            <div class="loading">Loading</div>
+                            <div class="error-message"></div>
+                            <div class="sent-message">Your subscription request has been sent. Thank you!</div>
+                        </form>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="copyright">
+            <div class="container text-center">
+                <p>© <span>Copyright</span> <strong class="px-1 sitename">AP</strong> <span>All Rights Reserved</span></p>
+                <div class="credits">
+                    <!-- All the links in the footer should remain intact. -->
+                    <!-- You can delete the links only if you've purchased the pro version. -->
+                    <!-- Licensing information: https://bootstrapmade.com/license/ -->
+                    <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
+                    Designed by <a href="https://rossumtechsystems.com/">Rossum Tech Systems</a>
+                </div>
+            </div>
+        </div>
+
+    </footer>
 </html>
