--- a/ap_website/templates/home/home_page.html
+++ b/ap_website/templates/home/home_page.html
@@ -16,7 +16,7 @@
         <div class="row justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
           <div class="col-xl-6 col-lg-8">
             <h2>{{self.banner_title}}<span>.</span></h2>
-            <p>{{self.banner_title}}</p>
+            <p>{{self.banner_sub_title}}</p>
           </div>
         </div>
 
