--- a/ap_website/templates/home/home_page.html
+++ b/ap_website/templates/home/home_page.html
@@ -8,8 +8,8 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero section">
-
-      <img src="{% static 'img/hero-bg.jpg' %}" alt="" data-aos="fade-in">
+      {% image page.back_ground_photo fill-1024x948 as img %}
+      <img src={{img.url}} alt="" data-aos="fade-in">
 
       <div class="container">
 
