--- a/ap_website/templates/home/home_page.html
+++ b/ap_website/templates/home/home_page.html
@@ -64,7 +64,10 @@
 
         <div class="row gy-4">
           <div class="col-lg-6 order-1 order-lg-2">
-            <img src="{% static 'img/about.jpg' % }" class="img-fluid" alt="">
+
+
+            {% image page.about_photo fill-1024x768 as img %}
+            <img src="{{img.url}}" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 order-2 order-lg-1 content">
             <h3>About Alvin and Partners</h3>
