--- a/ap_website/templates/footer/footer.html
+++ b/ap_website/templates/footer/footer.html
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="row gy-4">
                 <div class="col-lg-4 col-md-6 footer-about">
-                    <a href="index.html" class="logo d-flex align-items-center">
+                    <a href="/" class="logo d-flex align-items-center">
                         <span class="sitename">AP</span>
                     </a>
 <!--                    <div class="footer-contact pt-3">-->
@@ -15,7 +15,7 @@
 <!--                    </div>-->
                     <div class="social-links d-flex mt-4">
                         <a href=""><i class="bi bi-twitter-x"></i></a>
-                        <a href=""><i class="bi bi-facebook"></i></a>
+                        <a href=""><i class="bi bi-whatsapp"></i></a>
                         <a href=""><i class="bi bi-instagram"></i></a>
                         <a href=""><i class="bi bi-linkedin"></i></a>
                     </div>
@@ -24,9 +24,9 @@
                 <div class="col-lg-2 col-md-3 footer-links">
                     <h4>Useful Links</h4>
                     <ul>
-                        <li><i class="bi bi-chevron-right"></i> <a href="#hero"> Home</a></li>
-                        <li><i class="bi bi-chevron-right"></i> <a href="#about"> About us</a></li>
-                        <li><i class="bi bi-chevron-right"></i> <a href="#service"> About us</a></li>
+                        <li><i class="bi bi-chevron-right"></i> <a href="/#hero"> Home</a></li>
+                        <li><i class="bi bi-chevron-right"></i> <a href="/#about"> About us</a></li>
+                        <li><i class="bi bi-chevron-right"></i> <a href="/#service"> service</a></li>
                         <!--                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Services</a></li>-->
                         <!--                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Terms of service</a></li>-->
                         <!--                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Privacy policy</a></li>-->
