--- a/ap_website/templates/streams/staff_card.html
+++ b/ap_website/templates/streams/staff_card.html
@@ -13,7 +13,7 @@
                     <img src="{{img.url}}" class="img-fluid" alt="">
                     <div class="social">
                         <a href="{{card.x}}" target="_blank"><i class="bi bi-twitter-x"></i></a>
-                        <a href="{{card.Facebook}}" target="_blank"><i class="bi bi-facebook"></i></a>
+                        <a href="{{card.Facebook}}" target="_blank"><i class="bi bi-whatsapp"></i></a>
                         <a href="{{card.instagram}}" target="_blank"><i class="bi bi-instagram"></i></a>
                         <a href="{{card.linkedin}}" target="_blank"><i class="bi bi-linkedin"></i></a>
                     </div>
