--- a/ap_website/templates/streams/staff_card.html
+++ b/ap_website/templates/streams/staff_card.html
@@ -12,10 +12,21 @@
 
                     <img src="{{img.url}}" class="img-fluid" alt="">
                     <div class="social">
-                        <a href={{card.x}} target="_blank"><i class="bi bi-twitter-x"></i></a>
-                        <a href={{card.whatsApp}} target="_blank"><i class="bi bi-whatsapp"></i></a>
-                        <a href={{card.instagram}} target="_blank"><i class="bi bi-instagram"></i></a>
-                        <a href={{card.linkedin}} target="_blank"><i class="bi bi-linkedin"></i></a>
+                        {% if card.x %}
+                            <a href={{card.x}} target="_blank"><i class="bi bi-twitter-x"></i></a>
+                        {% endif %}
+
+                        {% if card.whatsApp %}
+                            <a href={{card.whatsApp}} target="_blank"><i class="bi bi-whatsapp"></i></a>
+                        {% endif %}
+
+                        {% if card.instagram %}
+                            <a href={{card.instagram}} target="_blank"><i class="bi bi-instagram"></i></a>
+                        {% endif %}
+
+                        {% if card.linkedin %}
+                            <a href={{card.linkedin}} target="_blank"><i class="bi bi-linkedin"></i></a>
+                        {% endif %}
                     </div>
                 </div>
                 <div class="member-info">
