--- a/ap_website/templates/home/home_page.html
+++ b/ap_website/templates/home/home_page.html
@@ -576,7 +576,8 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="mb-5" data-aos="fade-up" data-aos-delay="200">
-          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.7736994041265!2d32.599100299999996!3d0.270976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x177dbdbc23f0c74d%3A0x7c91f19d071a6158!2s9B%20Luwafu%208665%2C%20Kampala!5e0!3m2!1sen!2sug!4v1722867009480!5m2!1sen!2sug" frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31918.18967686107!2d32.57152462999163!3d0.2709450160157134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x177dbd002c6ce3d9%3A0x9943a526577ffde5!2sAlvin%20and%20Partners!5e0!3m2!1sen!2sug!4v1723024854974!5m2!1sen!2sug" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 <!--         End Google Maps-->
 
