--- a/ap_website/templates/home/home_page.html
+++ b/ap_website/templates/home/home_page.html
@@ -381,7 +381,7 @@
                 <div class="stats-item d-flex">
                   <i class="bi bi-emoji-smile flex-shrink-0"></i>
                   <div>
-                    <span data-purecounter-start="0" data-purecounter-end={{self.happy_clients}} data-purecounter-duration="1" class="purecounter"></span>
+                    <span data-purecounter-start="0" data-purecounter-end={{self.happy_clients_number}} data-purecounter-duration="1" class="purecounter"></span>
                     <p><strong>Happy Clients</strong> <span>we have worked with.</span></p>
                   </div>
                 </div>
@@ -391,7 +391,7 @@
                 <div class="stats-item d-flex">
                   <i class="bi bi-journal-richtext flex-shrink-0"></i>
                   <div>
-                    <span data-purecounter-start="0" data-purecounter-end={{self.project}} data-purecounter-duration="1" class="purecounter"></span>
+                    <span data-purecounter-start="0" data-purecounter-end={{self.projects_number}} data-purecounter-duration="1" class="purecounter"></span>
                     <p><strong>Projects</strong> <span>successfully worked on.</span></p>
                   </div>
                 </div>
