--- a/ap_website/templates/service/service-details.html
+++ b/ap_website/templates/service/service-details.html
@@ -44,7 +44,7 @@
             <div class="service-box">
               <h4>Download Catalog</h4>
               <div class="download-catalog">
-                <a href={{self.quotation_pdf.url}}"><i class="bi bi-filetype-pdf"></i><span>Get quotation PDF</span></a>
+                <a href="{{self.quotation_pdf.url}}"><i class="bi bi-filetype-pdf"></i><span>Get quotation PDF</span></a>
                 <a href="{{self.quotation_doc.url}}"><i class="bi bi-file-earmark-word"></i><span>Get quotation DOC</span></a>
               </div>
             </div><!-- End Services List -->
