--- a/ap_website/templates/service/service-details.html
+++ b/ap_website/templates/service/service-details.html
@@ -53,7 +53,7 @@
                 {% if self.quotation_pdf %}
                   <a href="{{self.quotation_doc.url}}"><i class="bi bi-file-earmark-word"></i><span>Get quotation DOC</span></a>
                 {% else %}
-                  <a href=""><i class="bi bi-filetype-pdf"></i><span>No quotation DOC</span></a>
+                  <a href=""><i class="bi bi-file-earmark-word"></i><span>No quotation DOC</span></a>
                 {% endif %}
 
 
