--- a/ap_website/templates/footer/footer.html
+++ b/ap_website/templates/footer/footer.html
@@ -5,7 +5,14 @@
             <div class="row gy-4">
                 <div class="col-lg-4 col-md-6 footer-about">
                     <a href="/" class="logo d-flex align-items-center">
-                        <span class="sitename">AP</span>
+                        <svg width="46" height="20" viewBox="0 0 46 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M19.5837 4.59419V0.155229C22.9878 0.0875326 30.1849 -0.0362555 31.74 0.010165C33.2951 0.0565856 34.1481 2.4279 34.3802 3.60776H22.8041L19.5837 4.59419Z" fill="#292876"/>
+                            <path d="M11.4311 14.1684L5.04823 20H7.34024L10.1835 17.2438L11.1699 20H13.8101L11.4311 14.1684Z" fill="#292876"/>
+                            <path d="M0 19.942C7.60136 10.7687 30.3183 -5.87944 45.318 11.4412C37.9899 2.97919 25.9507 4.27343 15.2607 10.5946L18.5392 19.942H14.6805L12.0113 12.6998C9.1256 14.7369 6.27722 17.3012 3.82969 19.942H0Z" fill="#F01D23"/>
+                            <path d="M19.1775 19.942V9.67143L23.5294 7.66955V9.90354C25.686 9.91321 30.0979 9.92675 30.4925 9.90354C30.8871 9.88033 30.9857 9.46834 30.9857 9.26525V6.27693H34.9895C34.9798 6.73147 34.9663 8.13375 34.9895 10.1066C35.0127 12.0795 32.5621 13.1723 31.3338 13.4721H23.5294V19.942H19.1775Z" fill="#F01D23"/>
+                            <path d="M1.18953 16.3734L6.41183 0.155229H11.4601L13.9842 7.75659L10.9378 9.61341L8.90694 3.4917L6.41183 11.7604L1.18953 16.3734Z" fill="#292876"/>
+                            </svg>
+                            
                     </a>
                     <div class="footer-contact pt-3">
                         {% if not home %}
@@ -41,21 +48,11 @@
                         <li><i class="bi bi-chevron-right"></i> <a href="/#about"> About us</a></li>
                         <li><i class="bi bi-chevron-right"></i> <a href="/#service"> service</a></li>
                         <!--                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Services</a></li>-->
-                        <!--                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Terms of service</a></li>-->
-                        <!--                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Privacy policy</a></li>-->
+                        
                     </ul>
                 </div>
 
-                <!--                    <div class="col-lg-2 col-md-3 footer-links">-->
-                <!--                        <h4>Our Services</h4>-->
-                <!--                        <ul>-->
-                <!--                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Web Design</a></li>-->
-                <!--                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Web Development</a></li>-->
-                <!--                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Product Management</a></li>-->
-                <!--                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Marketing</a></li>-->
-                <!--                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Graphic Design</a></li>-->
-                <!--                        </ul>-->
-                <!--                    </div>-->
+              
 
                 <div class="col-lg-4 col-md-12 footer-newsletter">
                     <h4>Our Newsletter</h4>
@@ -76,10 +73,6 @@
         <div class="container text-center">
             <p>© <span>Copyright</span> <strong class="px-1 sitename">AP</strong> <span>All Rights Reserved</span></p>
             <div class="credits">
-                <!-- All the links in the footer should remain intact. -->
-                <!-- You can delete the links only if you've purchased the pro version. -->
-                <!-- Licensing information: https://bootstrapmade.com/license/ -->
-                <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
                 Designed by <a href="https://rossumtechsystems.com/">Rossum Tech Systems</a>
             </div>
         </div>
